Renamed the project from AdvArtilleryRemotes to AdvancedArtilleryRemotesContinued:
- Updated author field.
- Updated homepage to point to project's Github repository.
- Introduced explicit incompatbility with AdvArtilleryRemotes.
- Updated all namespaced paths and resources.
- Updated license copyright.

--- a/locale/en/en.cfg
+++ b/locale/en/en.cfg
@@ -1,8 +1,5 @@
 [mod-name]
-AdvArtilleryRemotes=Advanced Artillery Remotes
-
-[mod-description]
-LTN_Combinator=Provides a custom GUI for constant combinators to ease managing of signals for LogisticTrainNetwork. 
+AdvancedArtilleryRemotesContinued=Advanced Artillery Remotes Continued
 
 [item-name]
 artillery-cluster-remote=Artillery Cluster Remote
