Cleaned-up logging and updated copyright notices:
- Drop the logger module altogether.
- Use localised strings for showing messages.
- Expanded setting descriptions.
- Added missing copyright notices to all lua files.
- Dropped unused defines module.

--- a/locale/en/en.cfg
+++ b/locale/en/en.cfg
@@ -10,21 +10,29 @@ artillery-cluster-remote=Artillery Cluster Remote
 artillery-discovery-remote=Artillery Discovery Remote
 
 [mod-setting-name]
-aar-verbose=Verbose
+aar-verbose=Verbose notifications
 aar-cluster-mode=Cluster mode
 aar-cluster-radius=Cluster radius
-aar-merge-radius=Cluster merge radius
+aar-merge-radius=Cluster target overlap radius
 aar-arc-radius=Discovery arc radius
-aar-angle-width=Discovery angle width
+aar-angle-width=Discovery target distance
 
 [mod-setting-description]
-aar-verbose=
-aar-cluster-mode=
-aar-cluster-radius=
-aar-merge-radius=
-aar-arc-radius=
-aar-angle-width=
+aar-verbose=Enable verbose notifications when using advanced artillery remotes. Outputs detailed information to console.
+aar-cluster-mode=Specify what entities should be targeted by artillery cluster remote.
+aar-cluster-radius=Specify coverage radius (in tiles) when using artillery cluster remote. Increasing this value result in larger area being covered by the artillery strike.
+aar-merge-radius=Specify overlap radius for optimising firing of artillery rounds when using artillery cluster remote. Higher values result in higher number of artillery rounds fired, lower values reduce artillery rounds usage. It is recommended to set this value to artillery ammo explosion radius (higher values could result in some targets slipping through).
+aar-arc-radius=Specify discovery arc radius (in degrees) when using the artillery discovery remote. Center of arc is the artillery piece closest to requested position.
+aar-angle-width=Specify distance (along the arc) between targets used with artillery discovery remote.
 
 [string-mod-setting]
 aar-cluster-mode-spawner-only=Spawners Only
 aar-cluster-mode-spawner-and-worms=Spawners and Worms
+
+[info]
+aar-artillery-cluster-requested=Artillery cluster bombardment requested. Blanketing __1__ target(s) with __2__ artillery strikes.
+aar-artillery-discovery-requested=Artillery discovery requested for radius of __1__°. Firing __3__ artillery rounds at __2__° radial distance.
+
+[error]
+aar-no-enemy-forces=There are no enemy forces in the game to target with artillery cluster remote.
+aar-no-valid-targets=No valid targets found for the artillery cluster remote.
