Implemented less obnoxious notifications:
- Notifications are only show to player that used the remote.
- Verbose notifications are now off by default.
- Error message is played if remotes cannot be used.
- Code has been refactored slightly to pass-in the player objects
  instead of force (to cater for notifications).

--- a/locale/en/en.cfg
+++ b/locale/en/en.cfg
@@ -30,9 +30,9 @@ aar-cluster-mode-spawner-only=Spawners Only
 aar-cluster-mode-spawner-and-worms=Spawners and Worms
 
 [info]
-aar-artillery-cluster-requested=Artillery cluster bombardment requested. Blanketing __1__ target(s) with __2__ artillery strikes.
-aar-artillery-discovery-requested=Artillery discovery requested for radius of __1__°. Firing __3__ artillery rounds at __2__° radial distance.
+aar-artillery-cluster-requested=Blanketing __1__ __plural_for_parameter_1_{1=target|rest=targets}__ with __2__ __plural_for_parameter_2_{1=artillery round|rest=artillery rounds}__
+aar-artillery-discovery-requested=Radius __1__°, __3__ __plural_for_parameter_3_{1=artillery round|rest=artillery rounds}__ at __2__° radial distance
 
 [error]
-aar-no-enemy-forces=There are no enemy forces in the game to target with artillery cluster remote.
-aar-no-valid-targets=No valid targets found for the artillery cluster remote.
+aar-no-valid-targets=No valid targets found
+aar-no-supported-artillery=No supported artillery found
