Made some settings player-specific:
- Verbose logging is now enabled/disabled on per-player basis.
- Artillery cluster remote mode can now be overridden via per-player
  settings.

--- a/locale/en/en.cfg
+++ b/locale/en/en.cfg
@@ -12,6 +12,7 @@ artillery-discovery-remote=Artillery Discovery Remote
 [mod-setting-name]
 aar-verbose=Verbose notifications
 aar-cluster-mode=Cluster mode
+aar-cluster-mode-player=Cluster mode (player override)
 aar-cluster-radius=Cluster radius
 aar-merge-radius=Cluster target overlap radius
 aar-arc-radius=Discovery arc radius
@@ -19,7 +20,8 @@ aar-angle-width=Discovery target distance
 
 [mod-setting-description]
 aar-verbose=Enable verbose notifications when using advanced artillery remotes. Outputs detailed information to console.
-aar-cluster-mode=Specify what entities should be targeted by artillery cluster remote.
+aar-cluster-mode=Specify what entities should be targeted by artillery cluster remote. Can be overridden per-player.
+aar-cluster-mode-player=Specify what entities should be targeted by artillery cluster remote. Overrides map setting.
 aar-cluster-radius=Specify coverage radius (in tiles) when using artillery cluster remote. Increasing this value result in larger area being covered by the artillery strike.
 aar-merge-radius=Specify overlap radius for optimising firing of artillery rounds when using artillery cluster remote. Higher values result in higher number of artillery rounds fired, lower values reduce artillery rounds usage. It is recommended to set this value to artillery ammo explosion radius (higher values could result in some targets slipping through).
 aar-arc-radius=Specify discovery arc radius (in degrees) when using the artillery discovery remote. Center of arc is the artillery piece closest to requested position.
@@ -28,6 +30,9 @@ aar-angle-width=Specify distance (along the arc) between targets used with artil
 [string-mod-setting]
 aar-cluster-mode-spawner-only=Spawners Only
 aar-cluster-mode-spawner-and-worms=Spawners and Worms
+aar-cluster-mode-player-use-map-setting=Use Map Setting
+aar-cluster-mode-player-spawner-only=Spawners Only
+aar-cluster-mode-player-spawner-and-worms=Spawners and Worms
 
 [info]
 aar-artillery-cluster-requested=Blanketing __1__ __plural_for_parameter_1_{1=target|rest=targets}__ with __2__ __plural_for_parameter_2_{1=artillery round|rest=artillery rounds}__
