Added fallback setting for using cluster remote as regular artillery remote:
- Setting can be configured per-player.
- Provides means for player to use the cluster remote as vanilla
  artillery remote (if it can't target nests/worms).
- Refactored code slightly to make it easier to implement the
  setting. Reduces cluster remote function complexity a bit as well.

--- a/locale/en/en.cfg
+++ b/locale/en/en.cfg
@@ -17,6 +17,7 @@ aar-cluster-radius=Cluster radius
 aar-merge-radius=Cluster target overlap radius
 aar-arc-radius=Discovery arc radius
 aar-angle-width=Discovery target distance
+aar-cluster-single-target-fallback=Enable cluster remote single target fallback
 
 [mod-setting-description]
 aar-verbose=Enable verbose notifications when using advanced artillery remotes. Outputs detailed information to console.
@@ -26,6 +27,7 @@ aar-cluster-radius=Specify coverage radius (in tiles) when using artillery clust
 aar-merge-radius=Specify overlap radius for optimising firing of artillery rounds when using artillery cluster remote. Higher values result in higher number of artillery rounds fired, lower values reduce artillery rounds usage. It is recommended to set this value to artillery ammo explosion radius (higher values could result in some targets slipping through).
 aar-arc-radius=Specify discovery arc radius (in degrees) when using the artillery discovery remote. Center of arc is the artillery piece closest to requested position.
 aar-angle-width=Specify distance (along the arc) between targets used with artillery discovery remote.
+aar-cluster-single-target-fallback=Enables fallback to targeting selected position with a single artillery round if no spawners/worms could be found within the configured radius. Essentially allows use of cluster remote as regular (vanilla) artillery remote when targeting areas without spawners (and/or worms, depending on mode of operation).
 
 [string-mod-setting]
 aar-cluster-mode-spawner-only=Spawners Only
