Fixed support for non-vanilla artillery turrets when using the discovery remote:
- Try to assemble list of supported artillery turret prototypes
  dynamically based on supported ammo categories.

--- a/locale/en/en.cfg
+++ b/locale/en/en.cfg
@@ -43,3 +43,4 @@ aar-artillery-discovery-requested=Radius __1__°, __3__ __plural_for_parameter_3
 [error]
 aar-no-valid-targets=No valid targets found
 aar-no-supported-artillery=No supported artillery found
+aar-no-supported-artillery-in-game=[color=red][ERROR][/color] No supported artillery capable of firing "artillery-shell" ammo category found in current savegame. Please report as a bug to author of Advanced Artillery Remotes Continued.
