--- a/locale/en/en.cfg
+++ b/locale/en/en.cfg
@@ -14,7 +14,7 @@ aar-verbose=Verbose notifications
 aar-cluster-mode=Cluster mode
 aar-cluster-mode-player=Cluster mode (player override)
 aar-cluster-radius=Cluster radius
-aar-merge-radius=Cluster target overlap radius
+aar-damage-radius-overrides=Damage radius overrides for cluster targeting
 aar-arc-radius=Discovery arc radius
 aar-angle-width=Discovery target distance
 aar-cluster-single-target-fallback=Enable cluster remote single target fallback
@@ -24,7 +24,7 @@ aar-verbose=Enable verbose notifications when using advanced artillery remotes. 
 aar-cluster-mode=Specify what entities should be targeted by artillery cluster remote. Can be overridden per-player.
 aar-cluster-mode-player=Specify what entities should be targeted by artillery cluster remote. Overrides map setting.
 aar-cluster-radius=Specify coverage radius (in tiles) when using artillery cluster remote. Increasing this value result in larger area being covered by the artillery strike.
-aar-merge-radius=Specify overlap radius for optimising firing of artillery rounds when using artillery cluster remote. Higher values result in higher number of artillery rounds fired, lower values reduce artillery rounds usage. It is recommended to set this value to artillery ammo explosion radius (higher values could result in some targets slipping through).
+aar-damage-radius-overrides=Specify damage radius overrides for artillery ammo categories used for optimising firing of artillery rounds when using artillery cluster remote. These values are used by the cluster targeting algorithm to reduce the number of artillery rounds fired, taking into account explosion (damage) radius of projectiles.\n\nDefault values are calculated automatically, but in some cases they might be suboptimal, allowing some of the targets to slip through and survive the attack. For example, projectile could cause more damage towards the epicenter than towards the periphery of impact point.\n\nAnother use-case for overriding the calculated defaults is in cases where artillery ammo belonging to the same ammo category has different damage radius, since by default the algorithm uses the largest damage radius within a particular ammo category - in that case you may want to either increase or decrease the values as necessary.\n\nThe setting should be specified in the following format:\n\n    AMMOCAT1=RADIUS1,AMMOCAT2=RADIUS2\n\nFor example:\n\n    artillery-shell=3,atomic-artillery=12\n\nCalculated defaults can be seen by running the console command:\n\n    /aar-show-damage-radius-defaults
 aar-arc-radius=Specify discovery arc radius (in degrees) when using the artillery discovery remote. Center of arc is the artillery piece closest to requested position.
 aar-angle-width=Specify distance (along the arc) between targets used with artillery discovery remote.
 aar-cluster-single-target-fallback=Enables fallback to targeting selected position with a single artillery round if no spawners/worms could be found within the configured radius. Essentially allows use of cluster remote as regular (vanilla) artillery remote when targeting areas without spawners (and/or worms, depending on mode of operation).
@@ -39,8 +39,13 @@ aar-cluster-mode-player-spawner-and-worms=Spawners and Worms
 [info]
 aar-artillery-cluster-requested=Blanketing __1__ __plural_for_parameter_1_{1=target|rest=targets}__ with __2__ __plural_for_parameter_2_{1=artillery round|rest=artillery rounds}__
 aar-artillery-discovery-requested=Radius __1__°, __3__ __plural_for_parameter_3_{1=artillery round|rest=artillery rounds}__ at __2__° radial distance
+aar-ammo-category-damage-radius-defaults=Current ammo category damage radius defaults:\n__1__
+
+[warning]
+aar-unknown-ammo-category=[color=yellow][WARNING][/color] Current game does not contain the following ammo categories (specified for damage radius overrides): __1__
 
 [error]
 aar-no-valid-targets=No valid targets found
 aar-no-supported-artillery=No supported artillery found
 aar-no-supported-artillery-in-game=[color=red][ERROR][/color] No supported artillery capable of firing "artillery-shell" ammo category found in current savegame. Please report as a bug to author of Advanced Artillery Remotes Continued.
+aar-error-parsing-damage-radius-overrides=[color=red][ERROR][/color] Failed to parse damage radius overrides. Value must be provided in the following format: AMMOCAT1=RADIUS1,AMMOCAT2=RADIUS2,...  - for example: artillery-shell=5,atomic-artillery=12).
