--- a/locale/en/en.cfg
+++ b/locale/en/en.cfg
@@ -3,49 +3,47 @@ AdvancedArtilleryRemotesContinued=Advanced Artillery Remotes Continued
 
 [item-name]
 artillery-cluster-remote=Artillery Cluster Remote
-artillery-discovery-remote=Artillery Discovery Remote
 
 [recipe-name]
 artillery-cluster-remote=Artillery Cluster Remote
-artillery-discovery-remote=Artillery Discovery Remote
+
+[technology-name]
+artillery-cluster-remote=Artillery Cluster Remote
 
 [mod-setting-name]
-aar-verbose=Verbose notifications
-aar-cluster-mode=Cluster mode
-aar-cluster-mode-player=Cluster mode (player override)
-aar-cluster-radius=Cluster radius
-aar-damage-radius-overrides=Damage radius overrides for cluster targeting
-aar-arc-radius=Discovery arc radius
-aar-angle-width=Discovery target distance
-aar-cluster-single-target-fallback=Enable cluster remote single target fallback
+asc-verbose=Verbose notifications
+asc-cluster-mode=Cluster mode
+asc-cluster-mode-player=Cluster mode (player override)
+asc-cluster-radius=Cluster radius
+asc-cluster-iterations=Number of clustering iterations
+asc-damage-radius-overrides=Damage radius overrides for cluster targeting
+asc-cluster-single-target-fallback=Enable cluster remote single target fallback
 
 [mod-setting-description]
-aar-verbose=Enable verbose notifications when using advanced artillery remotes. Outputs detailed information to console.
-aar-cluster-mode=Specify what entities should be targeted by artillery cluster remote. Can be overridden per-player.
-aar-cluster-mode-player=Specify what entities should be targeted by artillery cluster remote. Overrides map setting.
-aar-cluster-radius=Specify coverage radius (in tiles) when using artillery cluster remote. Increasing this value result in larger area being covered by the artillery strike.
-aar-damage-radius-overrides=Specify damage radius overrides for artillery ammo categories used for optimising firing of artillery rounds when using artillery cluster remote. These values are used by the cluster targeting algorithm to reduce the number of artillery rounds fired, taking into account explosion (damage) radius of projectiles.\n\nDefault values are calculated automatically, but in some cases they might be suboptimal, allowing some of the targets to slip through and survive the attack. For example, projectile could cause more damage towards the epicenter than towards the periphery of impact point.\n\nAnother use-case for overriding the calculated defaults is in cases where artillery ammo belonging to the same ammo category has different damage radius, since by default the algorithm uses the largest damage radius within a particular ammo category - in that case you may want to either increase or decrease the values as necessary.\n\nThe setting should be specified in the following format:\n\n    AMMOCAT1=RADIUS1,AMMOCAT2=RADIUS2\n\nFor example:\n\n    artillery-shell=3,atomic-artillery=12\n\nCalculated defaults can be seen by running the console command:\n\n    /aar-show-damage-radius-defaults
-aar-arc-radius=Specify discovery arc radius (in degrees) when using the artillery discovery remote. Center of arc is the artillery piece closest to requested position.
-aar-angle-width=Specify distance (along the arc) between targets used with artillery discovery remote.
-aar-cluster-single-target-fallback=Enables fallback to targeting selected position with a single artillery round if no spawners/worms could be found within the configured radius. Essentially allows use of cluster remote as regular (vanilla) artillery remote when targeting areas without spawners (and/or worms, depending on mode of operation).
+asc-verbose=Enable verbose notifications when using advanced artillery remotes. Outputs detailed information to console.
+asc-cluster-mode=Specify what entities should be targeted by artillery cluster remote. Can be overridden per-player.
+asc-cluster-mode-player=Specify what entities should be targeted by artillery cluster remote. Overrides map setting.
+asc-cluster-radius=Specify coverage radius (in tiles) when using artillery cluster remote. Increasing this value results in larger area being covered by the artillery strike.
+asc-cluster-iterations=Specify number of iterations to run on clustering algorithm.\n\nIncreasing this value MAY result in more efficient target coverage by artillery strikes at the cost of processing time.
+asc-damage-radius-overrides=Specify damage radius overrides for artillery ammo categories used for optimising firing of artillery rounds when using artillery cluster remote. These values are used by the cluster targeting algorithm to reduce the number of artillery rounds fired, taking into account explosion (damage) radius of projectiles.\n\nDefault values are calculated automatically, but in some cases they might be suboptimal, allowing some of the targets to slip through and survive the attack. For example, projectile could cause more damage towards the epicenter than towards the periphery of impact point.\n\nAnother use-case for overriding the calculated defaults is in cases where artillery ammo belonging to the same ammo category has different damage radius, since by default the algorithm uses the largest damage radius within a particular ammo category - in that case you may want to either increase or decrease the values as necessary.\n\nThe setting should be specified in the following format:\n\n    AMMOCAT1=RADIUS1,AMMOCAT2=RADIUS2\n\nFor example:\n\n    artillery-shell=3,atomic-artillery=12\n\nCalculated defaults can be seen by running the console command:\n\n    /asc-show-damage-radius-defaults
+asc-cluster-single-target-fallback=Enables fallback to targeting selected position with a single artillery round if no spawners/worms could be found within the configured radius. Essentially allows use of cluster remote as regular (vanilla) artillery remote when targeting areas without spawners (and/or worms, depending on mode of operation).
 
 [string-mod-setting]
-aar-cluster-mode-spawner-only=Spawners Only
-aar-cluster-mode-spawner-and-worms=Spawners and Worms
-aar-cluster-mode-player-use-map-setting=Use Map Setting
-aar-cluster-mode-player-spawner-only=Spawners Only
-aar-cluster-mode-player-spawner-and-worms=Spawners and Worms
+asc-cluster-mode-spawner-only=Spawners Only
+asc-cluster-mode-spawner-and-worms=Spawners and Worms
+asc-cluster-mode-player-use-map-setting=Use Map Setting
+asc-cluster-mode-player-spawner-only=Spawners Only
+asc-cluster-mode-player-spawner-and-worms=Spawners and Worms
 
 [info]
-aar-artillery-cluster-requested=Blanketing __1__ __plural_for_parameter_1_{1=target|rest=targets}__ with __2__ __plural_for_parameter_2_{1=artillery round|rest=artillery rounds}__
-aar-artillery-discovery-requested=Radius __1__°, __3__ __plural_for_parameter_3_{1=artillery round|rest=artillery rounds}__ at __2__° radial distance
-aar-ammo-category-damage-radius-defaults=Current ammo category damage radius defaults:\n__1__
+asc-artillery-cluster-requested=Engaging __1__ __plural_for_parameter_1_{1=target|rest=targets}__ with __2__ __plural_for_parameter_2_{1=artillery round|rest=artillery rounds}__
+asc-ammo-category-damage-radius-defaults=Current ammo category damage radius defaults:\n__1__
 
 [warning]
-aar-unknown-ammo-category=[color=yellow][WARNING][/color] Current game does not contain the following ammo categories (specified for damage radius overrides): __1__
+asc-unknown-ammo-category=[color=yellow][WARNING][/color] Current game does not contain the following ammo categories (specified for damage radius overrides): __1__
 
 [error]
-aar-no-valid-targets=No valid targets found
-aar-no-supported-artillery=No supported artillery found
-aar-no-supported-artillery-in-game=[color=red][ERROR][/color] No supported artillery capable of firing "artillery-shell" ammo category found in current savegame. Please report as a bug to author of Advanced Artillery Remotes Continued.
-aar-error-parsing-damage-radius-overrides=[color=red][ERROR][/color] Failed to parse damage radius overrides. Value must be provided in the following format: AMMOCAT1=RADIUS1,AMMOCAT2=RADIUS2,...  - for example: artillery-shell=5,atomic-artillery=12).
+asc-no-valid-targets=No valid targets found
+asc-no-supported-artillery=No supported artillery found
+asc-no-supported-artillery-in-game=[color=red][ERROR][/color] No supported artillery capable of firing "artillery-shell" ammo category found in current savegame. Please report as a bug to author of Advanced Artillery Remotes Continued.
+asc-error-parsing-damage-radius-overrides=[color=red][ERROR][/color] Failed to parse damage radius overrides. Value must be provided in the following format: AMMOCAT1=RADIUS1,AMMOCAT2=RADIUS2,...  - for example: artillery-shell=5,atomic-artillery=12).
