Add setting with localisation

--- a/locale/en/en.cfg
+++ b/locale/en/en.cfg
@@ -15,6 +15,7 @@ aar-cluster-mode=Cluster mode
 aar-cluster-mode-player=Cluster mode (player override)
 aar-cluster-radius=Cluster radius
 aar-damage-radius-overrides=Damage radius overrides for cluster targeting
+aar-cluster-iterations=Number of clustering iterations
 aar-arc-radius=Discovery arc radius
 aar-angle-width=Discovery target distance
 aar-cluster-single-target-fallback=Enable cluster remote single target fallback
@@ -24,6 +25,7 @@ aar-verbose=Enable verbose notifications when using advanced artillery remotes. 
 aar-cluster-mode=Specify what entities should be targeted by artillery cluster remote. Can be overridden per-player.
 aar-cluster-mode-player=Specify what entities should be targeted by artillery cluster remote. Overrides map setting.
 aar-cluster-radius=Specify coverage radius (in tiles) when using artillery cluster remote. Increasing this value result in larger area being covered by the artillery strike.
+aar-cluster-iterations=Specify number of iterations to run on clustering algorithm.\n\nIncreasing this value MAY result in more efficient target coverage by artillery strikes at the cost of processing time.
 aar-damage-radius-overrides=Specify damage radius overrides for artillery ammo categories used for optimising firing of artillery rounds when using artillery cluster remote. These values are used by the cluster targeting algorithm to reduce the number of artillery rounds fired, taking into account explosion (damage) radius of projectiles.\n\nDefault values are calculated automatically, but in some cases they might be suboptimal, allowing some of the targets to slip through and survive the attack. For example, projectile could cause more damage towards the epicenter than towards the periphery of impact point.\n\nAnother use-case for overriding the calculated defaults is in cases where artillery ammo belonging to the same ammo category has different damage radius, since by default the algorithm uses the largest damage radius within a particular ammo category - in that case you may want to either increase or decrease the values as necessary.\n\nThe setting should be specified in the following format:\n\n    AMMOCAT1=RADIUS1,AMMOCAT2=RADIUS2\n\nFor example:\n\n    artillery-shell=3,atomic-artillery=12\n\nCalculated defaults can be seen by running the console command:\n\n    /aar-show-damage-radius-defaults
 aar-arc-radius=Specify discovery arc radius (in degrees) when using the artillery discovery remote. Center of arc is the artillery piece closest to requested position.
 aar-angle-width=Specify distance (along the arc) between targets used with artillery discovery remote.
