--- a/locale/en/en.cfg
+++ b/locale/en/en.cfg
@@ -5,9 +5,9 @@ AdvancedArtilleryRemotesContinued=Advanced Artillery Remotes Continued
 artillery-cluster-remote=Artillery Cluster Remote
 artillery-discovery-remote=Artillery Discovery Remote
 
-[recipe-name]
-artillery-cluster-remote=Artillery Cluster Remote
-artillery-discovery-remote=Artillery Discovery Remote
+[shortcut-name]
+give-artillery-cluster-remote=Give Artillery Cluster Remote
+give-artillery-discovery-remote=Give Artillery Discovery Remote
 
 [mod-setting-name]
 aar-verbose=Verbose notifications
