--- a/locale/en/en.cfg
+++ b/locale/en/en.cfg
@@ -5,9 +5,13 @@ AdvancedArtilleryRemotesContinued=Advanced Artillery Remotes Continued
 artillery-cluster-remote=Artillery Cluster Remote
 artillery-discovery-remote=Artillery Discovery Remote
 
+[item-description]
+artillery-cluster-remote=An artillery remote that targets nearby spawners and/or worms and blanket them with artillery fire.
+artillery-discovery-remote=An artillery remote that lays down artillery fire in an arc, making it useful for discovering the unexplored parts of the map.
+
 [shortcut-name]
-give-artillery-cluster-remote-artillery-shell=Give Artillery Cluster Remote
-give-artillery-discovery-remote=Give Artillery Discovery Remote
+create-artillery-cluster-remote-artillery-shell=Create Artillery Cluster Remote
+create-artillery-discovery-remote=Create Artillery Discovery Remote
 
 [mod-setting-name]
 aar-verbose=Verbose notifications
