try adding controls

--- a/locale/en/en.cfg
+++ b/locale/en/en.cfg
@@ -13,6 +13,10 @@ artillery-discovery-remote=An artillery remote that lays down artillery fire in 
 create-artillery-cluster-remote-artillery-shell=Create Artillery Cluster Remote
 create-artillery-discovery-remote=Create Artillery Discovery Remote
 
+[controls]
+create-artillery-cluster-remote-artillery-shell-hotkey=Artillery Cluster Remote
+create-artillery-discovery-remote-hotkey=Artillery Discovery Remote
+
 [mod-setting-name]
 aar-verbose=Verbose notifications
 aar-cluster-mode=Cluster mode
