--- a/locale/en/en.cfg
+++ b/locale/en/en.cfg
@@ -48,6 +48,7 @@ aar-cluster-mode-player-spawner-and-worms=Spawners and Worms
 aar-artillery-cluster-requested=Blanketing __1__ __plural_for_parameter_1_{1=target|rest=targets}__ with __2__ __plural_for_parameter_2_{1=artillery round|rest=artillery rounds}__
 aar-artillery-discovery-requested=Radius __1__°, __3__ __plural_for_parameter_3_{1=artillery round|rest=artillery rounds}__ at __2__° radial distance
 aar-ammo-category-damage-radius-defaults=Current ammo category damage radius defaults:\n__1__
+aar-recalc-damage-radius-defaults=Recalculated damage radius defaults.
 
 [warning]
 aar-unknown-ammo-category=[color=yellow][WARNING][/color] Current game does not contain the following ammo categories (specified for damage radius overrides): __1__
