Updated code for Factorio 2.0 compatibility:
- Drop deprecated Shortcuts integration.
- Bump Factorio minimum base game version to current(ish) stable version.
- Rework the advanced artillery remotes as shortcuts, similar to vanilla game artillery remote.
- Fix the code that extracts artillery shell ammo categories.
- Add custom inputs for the advanced artillery remotes.
- Add new command for reinitialising the mod data.

--- a/locale/en/en.cfg
+++ b/locale/en/en.cfg
@@ -5,9 +5,17 @@ AdvancedArtilleryRemotesContinued=Advanced Artillery Remotes Continued
 artillery-cluster-remote=Artillery Cluster Remote
 artillery-discovery-remote=Artillery Discovery Remote
 
-[recipe-name]
-artillery-cluster-remote=Artillery Cluster Remote
-artillery-discovery-remote=Artillery Discovery Remote
+[item-description]
+artillery-cluster-remote=An artillery remote that targets nearby spawners and/or worms and blanket them with artillery fire.
+artillery-discovery-remote=An artillery remote that lays down artillery fire in an arc, making it useful for discovering the unexplored parts of the map.
+
+[shortcut-name]
+create-artillery-cluster-remote-artillery-shell=Create Artillery Cluster Remote
+create-artillery-discovery-remote=Create Artillery Discovery Remote
+
+[controls]
+create-artillery-cluster-remote-artillery-shell-hotkey=Artillery Cluster Remote
+create-artillery-discovery-remote-hotkey=Artillery Discovery Remote
 
 [mod-setting-name]
 aar-verbose=Verbose notifications
@@ -40,6 +48,7 @@ aar-cluster-mode-player-spawner-and-worms=Spawners and Worms
 aar-artillery-cluster-requested=Blanketing __1__ __plural_for_parameter_1_{1=target|rest=targets}__ with __2__ __plural_for_parameter_2_{1=artillery round|rest=artillery rounds}__
 aar-artillery-discovery-requested=Radius __1__°, __3__ __plural_for_parameter_3_{1=artillery round|rest=artillery rounds}__ at __2__° radial distance
 aar-ammo-category-damage-radius-defaults=Current ammo category damage radius defaults:\n__1__
+aar-recalc-damage-radius-defaults=Recalculated damage radius defaults.
 
 [warning]
 aar-unknown-ammo-category=[color=yellow][WARNING][/color] Current game does not contain the following ammo categories (specified for damage radius overrides): __1__
