Match localisation with vanilla and fix dynamic localisation for cluster remotes:
- Avoid using upper-casing of all words to make it look nicer and more
  consistent with the rest of the game.
- Try to match-up some of the vanilla game naming style for various
  properties, localisation strings etc.

--- a/locale/en/en.cfg
+++ b/locale/en/en.cfg
@@ -2,20 +2,20 @@
 AdvancedArtilleryRemotesContinued=Advanced Artillery Remotes Continued
 
 [item-name]
-artillery-cluster-remote=Artillery Cluster Remote
-artillery-discovery-remote=Artillery Discovery Remote
+artillery-cluster-remote=Artillery cluster remote
+artillery-discovery-remote=Artillery discovery remote
 
 [item-description]
-artillery-cluster-remote=An artillery remote that targets nearby spawners and/or worms and blanket them with artillery fire.
-artillery-discovery-remote=An artillery remote that lays down artillery fire in an arc, making it useful for discovering the unexplored parts of the map.
+artillery-cluster-remote=Artillery remote that targets all nearby spawners and/or worms
+artillery-discovery-remote=Artillery remote that fires artillery shells in an arc (for exploration)
 
 [shortcut-name]
-create-artillery-cluster-remote-artillery-shell=Create Artillery Cluster Remote
-create-artillery-discovery-remote=Create Artillery Discovery Remote
+make-artillery-cluster-remote=Create artillery cluster remote
+make-artillery-discovery-remote=Create artillery discovery remote
 
 [controls]
-create-artillery-cluster-remote-artillery-shell-hotkey=Artillery Cluster Remote
-create-artillery-discovery-remote-hotkey=Artillery Discovery Remote
+give-artillery-cluster-remote=Artillery cluster remote
+give-artillery-discovery-remote=Artillery discovery remote
 
 [mod-setting-name]
 aar-verbose=Verbose notifications
@@ -38,11 +38,11 @@ aar-angle-width=Specify distance (along the arc) between targets used with artil
 aar-cluster-single-target-fallback=Enables fallback to targeting selected position with a single artillery round if no spawners/worms could be found within the configured radius. Essentially allows use of cluster remote as regular (vanilla) artillery remote when targeting areas without spawners (and/or worms, depending on mode of operation).
 
 [string-mod-setting]
-aar-cluster-mode-spawner-only=Spawners Only
-aar-cluster-mode-spawner-and-worms=Spawners and Worms
-aar-cluster-mode-player-use-map-setting=Use Map Setting
-aar-cluster-mode-player-spawner-only=Spawners Only
-aar-cluster-mode-player-spawner-and-worms=Spawners and Worms
+aar-cluster-mode-spawner-only=Spawners only
+aar-cluster-mode-spawner-and-worms=Spawners and worms
+aar-cluster-mode-player-use-map-setting=Use map settings
+aar-cluster-mode-player-spawner-only=Spawners only
+aar-cluster-mode-player-spawner-and-worms=Spawners and worms
 
 [info]
 aar-artillery-cluster-requested=Blanketing __1__ __plural_for_parameter_1_{1=target|rest=targets}__ with __2__ __plural_for_parameter_2_{1=artillery round|rest=artillery rounds}__
