Refactor the command that resets global data:
- Rename the command to better match what it does.
- Expand on the command explanation/help.
- Add admin check for the command.
- Fix some spacing (newline) issues when showing the help.

--- a/locale/en/en.cfg
+++ b/locale/en/en.cfg
@@ -48,7 +48,7 @@ aar-cluster-mode-player-spawner-and-worms=Spawners and worms
 aar-artillery-cluster-requested=Blanketing __1__ __plural_for_parameter_1_{1=target|rest=targets}__ with __2__ __plural_for_parameter_2_{1=artillery round|rest=artillery rounds}__
 aar-artillery-discovery-requested=Radius __1__°, __3__ __plural_for_parameter_3_{1=artillery round|rest=artillery rounds}__ at __2__° radial distance
 aar-ammo-category-damage-radius-defaults=Current ammo category damage radius defaults:\n__1__
-aar-recalc-damage-radius-defaults=Recalculated damage radius defaults.
+aar-global-data-reset=Global data has been reset.
 
 [warning]
 aar-unknown-ammo-category=[color=yellow][WARNING][/color] Current game does not contain the following ammo categories (specified for damage radius overrides): __1__
@@ -58,3 +58,4 @@ aar-no-valid-targets=No valid targets found
 aar-no-supported-artillery=No supported artillery found
 aar-no-supported-artillery-in-game=[color=red][ERROR][/color] No supported artillery capable of firing "artillery-shell" ammo category found in current savegame. Please report as a bug to author of Advanced Artillery Remotes Continued.
 aar-error-parsing-damage-radius-overrides=[color=red][ERROR][/color] Failed to parse damage radius overrides. Value must be provided in the following format: AMMOCAT1=RADIUS1,AMMOCAT2=RADIUS2,...  - for example: artillery-shell=5,atomic-artillery=12).
+aar-administrator-privileges-required=[color=red][ERROR][/color] Only administrators can use this command.
