Revert the algorithm change for calculating damage range defaults:
- Avoids breaking backwards compatibility, especially since an option
  was already present to modify the behaviour via mod settings.
- It might feel annoying to see just one regular artillery shell
  launched at a large nest, but maybe even more so seeing a bunch
  of (expensive) nukes hitting a small area.
- Include overrides in the command that show the damage range
  defaults.

--- a/locale/en/en.cfg
+++ b/locale/en/en.cfg
@@ -47,7 +47,7 @@ aar-cluster-mode-player-spawner-and-worms=Spawners and worms
 [info]
 aar-artillery-cluster-requested=Blanketing __1__ __plural_for_parameter_1_{1=target|rest=targets}__ with __2__ __plural_for_parameter_2_{1=artillery round|rest=artillery rounds}__
 aar-artillery-discovery-requested=Radius __1__°, __3__ __plural_for_parameter_3_{1=artillery round|rest=artillery rounds}__ at __2__° radial distance
-aar-ammo-category-damage-radius-defaults=Current ammo category damage radius defaults:\n__1__
+aar-ammo-category-damage-radius-defaults=Current ammo category damage radius defaults (configured overrides in parenthesis):\n__1__
 aar-global-data-reset=Global data has been reset.
 
 [warning]
